{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 25,
  "lineage": "ce0aa9db-47ab-87fc-cc8d-9561ad8bcfb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:internet-gateway/igw-044664939cba1eff1",
            "id": "igw-044664939cba1eff1",
            "owner_id": "590183833082",
            "tags": {
              "Name": "wp_igw"
            },
            "tags_all": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183833082:loadbalancer/app/wp-alb/bbfbeb19612427d6",
            "arn_suffix": "app/wp-alb/bbfbeb19612427d6",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wp-alb-2022114967.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183833082:loadbalancer/app/wp-alb/bbfbeb19612427d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b5f9338757339884"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4626fad57f8e092"
              },
              {
                "subnet_id": "subnet-0b94d8b4c546d34b7"
              }
            ],
            "subnets": [
              "subnet-0a4626fad57f8e092",
              "subnet-0b94d8b4c546d34b7"
            ],
            "tags": {
              "Name": "wp_alb"
            },
            "tags_all": {
              "Name": "wp_alb"
            },
            "vpc_id": "vpc-0c121bf60ff486bac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.wp_subnet1",
            "aws_subnet.wp_subnet2",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wp_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183833082:listener/app/wp-alb/bbfbeb19612427d6/2e002494f1b9f306",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183833082:targetgroup/wp-alb-tg/cc768625d7ee3e1f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183833082:listener/app/wp-alb/bbfbeb19612427d6/2e002494f1b9f306",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590183833082:loadbalancer/app/wp-alb/bbfbeb19612427d6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wp_alb",
            "aws_lb_target_group.wp_alb_tg",
            "aws_security_group.elb_sg",
            "aws_subnet.wp_subnet1",
            "aws_subnet.wp_subnet2",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wp_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183833082:targetgroup/wp-alb-tg/cc768625d7ee3e1f",
            "arn_suffix": "targetgroup/wp-alb-tg/cc768625d7ee3e1f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183833082:targetgroup/wp-alb-tg/cc768625d7ee3e1f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wp-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:route-table/rtb-05b84ba2923afceb8",
            "id": "rtb-05b84ba2923afceb8",
            "owner_id": "590183833082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044664939cba1eff1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_rt"
            },
            "tags_all": {
              "Name": "wp_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_igw",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rta_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d2f20ea6419bb7",
            "route_table_id": "rtb-05b84ba2923afceb8",
            "subnet_id": "subnet-0a4626fad57f8e092"
          },
          "dependencies": [
            "aws_internet_gateway.wp_igw",
            "aws_route_table.wp_rt",
            "aws_subnet.wp_subnet1",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rta_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c536b784e6f051b7",
            "route_table_id": "rtb-05b84ba2923afceb8",
            "subnet_id": "subnet-0b94d8b4c546d34b7"
          },
          "dependencies": [
            "aws_internet_gateway.wp_igw",
            "aws_route_table.wp_rt",
            "aws_subnet.wp_subnet2",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:security-group/sg-0b5f9338757339884",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5f9338757339884",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240330064541735100000003",
            "name_prefix": "terraform-",
            "owner_id": "590183833082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_sg"
            },
            "tags_all": {
              "Name": "elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:security-group/sg-09ff3a39e94cf39b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ff3a39e94cf39b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240330064541734800000002",
            "name_prefix": "terraform-",
            "owner_id": "590183833082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_sg"
            },
            "tags_all": {
              "Name": "wp_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:subnet/subnet-0a4626fad57f8e092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4626fad57f8e092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183833082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wp_subnet1"
            },
            "tags_all": {
              "Name": "wp_subnet1"
            },
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:subnet/subnet-0b94d8b4c546d34b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b94d8b4c546d34b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183833082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wp_subnet2"
            },
            "tags_all": {
              "Name": "wp_subnet2"
            },
            "vpc_id": "vpc-0c121bf60ff486bac"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183833082:vpc/vpc-0c121bf60ff486bac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7983635942a45d9",
            "default_route_table_id": "rtb-0a6140f847430d123",
            "default_security_group_id": "sg-05a8161c1fa143b7b",
            "dhcp_options_id": "dopt-07164af7153fd9eeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c121bf60ff486bac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6140f847430d123",
            "owner_id": "590183833082",
            "tags": {
              "Name": "wp_vpc"
            },
            "tags_all": {
              "Name": "wp_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}